# cos711-a2

./: .gitignore  DataPreperation.ipynb  Dokerfile  README.md  cos711-a2.code-workspace  pyproject.toml
data/: prepared_data.csv  prepared_data.pickle
experiment/: Conjugate-NeuralNetwork.ipynb  Curriculum-NeuralNetwork.ipynb  DataPreperation.ipynb  NeuralNetwork.ipynb
experiment/curriculum-neural-network.tf/: keras_metadata.pb  saved_model.pb
experiment/curriculum-neural-network.tf/variables/: variables.data-00000-of-00001  variables.index
experiment/neural-network.tf/: keras_metadata.pb  saved_model.pb
experiment/neural-network.tf/variables/: variables.data-00000-of-00001  variables.index
experiment/standard-nn/run-0/trainined-model-0.tf/: saved_model.pb
experiment/standard-nn/run-0/trainined-model-0.tf/variables/: variables.data-00000-of-00001  variables.index
experiment/standard-nn/run-1/trainined-model-1.tf/: keras_metadata.pb  saved_model.pb
experiment/standard-nn/run-1/trainined-model-1.tf/variables/: variables.data-00000-of-00001  variables.index
experiment/standard-nn/run-2/trainined-model-2.tf/: keras_metadata.pb  saved_model.pb
experiment/standard-nn/run-3/trainined-model-3.tf/: keras_metadata.pb  saved_model.pb
experiment/standard-nn/run-4/trainined-model-4.tf/: keras_metadata.pb  saved_model.pb
report/: abstract.tex  background.tex  conclusion.tex  exp-set-up.tex  introduction.tex  main.tex  refs.bib  research-results.tex
research/: cgd.ipynb  cos711-lecture3-datapreperation.ipynb  take11.ipynb
(+6 files in other folders)
