[tool.poetry]
name = "cos711-a2"
version = "0.1.0"
description = ""
authors = ["Rishi Raval <ushir.raval@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
pandas = "^1.3.3"
jupyterlab = "^3.1.14"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
